--- a/BuzDolabiVI/Views/Tarifler/Index.cshtml
+++ b/BuzDolabiVI/Views/Tarifler/Index.cshtml
@@ -86,5 +86,25 @@
             }
         </ul>
     </div>
+    <div style="margin-top:11%">
+        <h2 style="text-align:center;">İÇECEK TARİFLERİ</h2>
+        <ul class="cards">
+            @for (int i = 0; i <= 10; i++)
+            {
+                <li class="card">
+                    <div>
+                        <h3 class="card-title">KART @i</h3>
+                        <div class="card-content">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        </div>
+                    </div>
+                    <div class="card-link-wrapper">
+                        <a href="" class="card-link">Learn More</a>
+                    </div>
+                </li>
+
+            }
+        </ul>
+    </div>
 
 </div>
