--- a/BuzDolabiVI/Views/Shared/_Layout.cshtml
+++ b/BuzDolabiVI/Views/Shared/_Layout.cshtml
@@ -27,22 +27,21 @@
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Tarifler" asp-action="Index">Tarifler</a>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                Tarifler
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                                <a class="dropdown-item" asp-area="" asp-controller="AnaYemek" asp-action="Index">Yemek Tarifleri</a>
+                                <a class="dropdown-item" asp-area="" asp-controller="Corba" asp-action="Index">Çorba Tarifleri</a>
+                                <a class="dropdown-item" asp-area="" asp-controller="Tatli" asp-action="Index">Tatlı Tarifleri</a>
+                                <a class="dropdown-item" asp-area="" asp-controller="Icecek" asp-action="Index">İçecek Tarifleri</a>
+                            </div>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Tarifler" asp-action="Privacy">Privacy</a>
                         </li>
-                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                              Dropdown link
-                            </a>
-                            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                              <a class="dropdown-item" href="#">Action</a>
-                              <a class="dropdown-item" href="#">Another action</a>
-                              <a class="dropdown-item" href="#">Something else here</a>
-                            </div>
-                        </li>
+                        
                     </ul>
                 </div>
             </div>
