Bir şeyler daha eklendi. %70 iskelet

--- a/BuzDolabiVI/Views/Tarifler/Index.cshtml
+++ b/BuzDolabiVI/Views/Tarifler/Index.cshtml
@@ -19,7 +19,7 @@
                         </div>
                     </div>
                     <div class="card-link-wrapper">
-                        <a href="" class="card-link">Learn More</a>
+                        <a class="card-link" asp-controller="Tarifler" asp-action="TarifGoster" asp-route-id="2">Learn More</a>
                     </div>
                 </li>
             
@@ -39,7 +39,7 @@
                         </div>
                     </div>
                     <div class="card-link-wrapper">
-                        <a href="" class="card-link">Learn More</a>
+                        <a class="card-link" asp-controller="Tarifler" asp-action="TarifGoster" asp-route-id="2">Learn More</a>
                     </div>
                 </li>
 
@@ -59,7 +59,7 @@
                         </div>
                     </div>
                     <div class="card-link-wrapper">
-                        <a href="" class="card-link">Learn More</a>
+                        <a class="card-link" asp-controller="Tarifler" asp-action="TarifGoster" asp-route-id="2">Learn More</a>
                     </div>
                 </li>
 
@@ -79,7 +79,7 @@
                         </div>
                     </div>
                     <div class="card-link-wrapper">
-                        <a href="" class="card-link">Learn More</a>
+                        <a class="card-link" asp-controller="Tarifler" asp-action="TarifGoster" asp-route-id="2">Learn More</a>
                     </div>
                 </li>
 
@@ -99,12 +99,40 @@
                         </div>
                     </div>
                     <div class="card-link-wrapper">
-                        <a href="" class="card-link">Learn More</a>
+                        <a class="card-link" asp-controller="Tarifler" asp-action="TarifGoster" asp-route-id="2">Learn More</a>
                     </div>
                 </li>
 
             }
         </ul>
     </div>
+    <div class="be-comment-block">
+        <h1 class="comments-title">Bu Kategorideki Yorumlar "buraya veri tabanından sayı gelecek"</h1>
+        <div class="be-comment">
+            <div class="be-img-comment">
+                <a href="blog-detail-2.html">
+                    <img src="https://bootdey.com/img/Content/avatar/avatar1.png" alt="" class="be-ava-comment">
+                </a>
+            </div>
+            <div class="be-comment-content">
 
+                <span class="be-comment-name">
+                    <a href="blog-detail-2.html">"Kullanici İsmi"</a>
+                </span>
+                <a class="yorumunTarifBasligi">TARİF İSMİ' tarifine yorum yaptı.</a>
+                <span class="be-comment-time">
+                    <i class="fa fa-clock-o"></i>
+                    "buraya veri tabanından zaman gelecek"
+                </span>
+
+                <p class="be-comment-text">
+                    VERİ TABANINDAN YORUM İÇERİĞİ GELİYOO GELİYOO
+                    VERİ TABANINDAN YORUM İÇERİĞİ GELİYOO GELİYOO
+                    VERİ TABANINDAN YORUM İÇERİĞİ GELİYOO GELİYOO
+                    VERİ TABANINDAN YORUM İÇERİĞİ GELİYOO GELİYOO
+                    VERİ TABANINDAN YORUM İÇERİĞİ GELİYOO GELİYOO
+                </p>
+            </div>
+        </div>
+    </div>
 </div>
