--- a/BuzDolabiVI/Views/AnaYemek/Index.cshtml
+++ b/BuzDolabiVI/Views/AnaYemek/Index.cshtml
@@ -4,7 +4,8 @@
 @{
 }
 <style></style>
-<h1>BEN TATLIYIM</h1>
+<div class="sayfalarinBasligi"><h1>ANA YEMEK TARİFLERİ</h1></div>
+
 <div class="container-fluid">
   <div class="px-lg-5">
 
@@ -12,20 +13,63 @@
 
     <div class="row">
       <!-- Gallery item -->
-      <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
-        <div class="bg-white rounded shadow-sm"><img src="https://bootstrapious.com/i/snippets/sn-gallery/img-1.jpg" alt="" class="img-fluid card-img-top">
-          <div class="p-4">
-            <h5> <a href="#" class="text-dark">Red paint cup</a></h5>
-            <p class="small text-muted mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
-            <div class="d-flex align-items-center justify-content-between rounded-pill bg-light px-3 py-2 mt-4">
-              <p class="small mb-0"><i class="fa fa-picture-o mr-2"></i><span class="font-weight-bold">JPG</span></p>
-              <div class="badge badge-danger px-3 rounded-pill font-weight-normal">New</div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <!-- End -->
+            @for(int i = 0; i <= 10; i++)
+            {
+                <div class="col-xl-3 col-lg-4 col-md-6 mb-4 ustuneGelinceBuyusun">
+                        <div class="bg-white rounded shadow-sm pb-1">
+                            <div class="text-center">
+                                  <a class="temizle" asp-controller="Tarifler" asp-action="TarifGoster" asp-route-id="2">
+                                      <h5 href="#" class="cardUstBaslik" >
+                                          Bu @i . sırada
+                                       </h5> 
+                                       <br />
+                                    <img src="https://bootstrapious.com/i/snippets/sn-gallery/img-1.jpg" alt="" class="" style="width:90%;height:90%">
+                                  </a>
+                                <p class="small text-muted mb-0 mt-1">Lorem ipsum dolor sit amet, consectetur adipisicing elit </p>
+                                    <div class="text-center  rounded-pill bg-light mb-2 mt-4">  
+                                        <p href="#" class="">Kullanıcının İsmi falan</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+               
+            }
+          
+     
     </div>
-    <div class="py-5 text-right"><a href="#" class="btn btn-dark px-5 py-3 text-uppercase">Show me more</a></div>
+        <!-- TARİFLER LİSTELENDİ -->
+        <!-- SON YORUMLAR LİSTELENİYOR -->
+		
+			<div class="be-comment-block">
+				<h1 class="comments-title">Bu Kategorideki Yorumlar "buraya veri tabanından sayı gelecek"</h1>
+				<div class="be-comment">
+					<div class="be-img-comment">
+						<a href="blog-detail-2.html">
+							<img src="https://bootdey.com/img/Content/avatar/avatar1.png" alt="" class="be-ava-comment">
+						</a>
+					</div>
+					<div class="be-comment-content">
+
+						<span class="be-comment-name">
+                        <a href="blog-detail-2.html">"Kullanici İsmi"</a>
+						</span>
+                    <a class="yorumunTarifBasligi">TARİF İSMİ' tarifine yorum yaptı.</a>
+                    <span class="be-comment-time">
+                        <i class="fa fa-clock-o"></i>
+							"buraya veri tabanından zaman gelecek"
+						</span>
+
+						<p class="be-comment-text">
+							VERİ TABANINDAN YORUM İÇERİĞİ GELİYOO GELİYOO
+                        VERİ TABANINDAN YORUM İÇERİĞİ GELİYOO GELİYOO
+                        VERİ TABANINDAN YORUM İÇERİĞİ GELİYOO GELİYOO
+                        VERİ TABANINDAN YORUM İÇERİĞİ GELİYOO GELİYOO
+                        VERİ TABANINDAN YORUM İÇERİĞİ GELİYOO GELİYOO
+						</p>
+					</div>
+				</div>
+			</div>
+		
+
   </div>
 </div>
