--- a/BuzDolabiVI/Views/Tarifler/Detayli_Tarif.cshtml
+++ b/BuzDolabiVI/Views/Tarifler/Detayli_Tarif.cshtml
@@ -1,1 +1,5 @@
-﻿
+﻿<div class="imageHolder">
+    <img src="~/images/kestane.jpg" alt="kestane" class="tarifBanner golgelendir" style="" />
+    <div class="imageBaslik">Buraya admin baslik belirleyecek veri tabanı değişecek.</div>
+</div>
+<div class=""></div>
