--- a/BuzDolabiVI/Views/AnaYemek/Index.cshtml
+++ b/BuzDolabiVI/Views/AnaYemek/Index.cshtml
@@ -15,7 +15,7 @@
       <!-- Gallery item -->
             @for(int i = 0; i <= 10; i++)
             {
-                <div class="col-xl-3 col-lg-4 col-md-6 mb-4 ustuneGelinceBuyusun">
+                <div class="col-xl-3 col-lg-4 col-md-6 mb-4 ustuneGelinceBuyusun  golgenlendir">
                         <div class="bg-white rounded shadow-sm pb-1">
                             <div class="text-center">
                                   <a class="temizle" asp-controller="Tarifler" asp-action="TarifGoster" asp-route-id="2">
