--- a/BuzDolabiVI/Views/Shared/_Layout.cshtml
+++ b/BuzDolabiVI/Views/Shared/_Layout.cshtml
@@ -16,7 +16,7 @@
 </head>
 <body>
     <header>
-        <div id="LogoVeGiris" class="fixed-top bg-primary">
+        <div id="LogoVeGiris" class="bg-primary">
             <div id="Logo">LOGO</div>
             <div id="AramaCubugu">ARAMA CUBUGU</div>
             <div id="KullaniciKismi">  <partial name="_LoginPartial" /></div>
@@ -59,6 +59,7 @@
     </div>
 
     <footer class="border-top footer text-muted mt-5">
+        <a href="#Nav"><img src="~/images/yukariok.png" style="width:3%; height:3%"/></a>
         <div class="container">
             &copy; 2022 - BuzDolabiVI - <a asp-area="" asp-controller="Tarifler" asp-action="Privacy">Privacy</a>
         </div>
@@ -66,6 +67,9 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+    <script>
+      
+    </script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
