--- a/BuzDolabiVI/wwwroot/css/genel.css
+++ b/BuzDolabiVI/wwwroot/css/genel.css
@@ -55,3 +55,8 @@
     background: -webkit-linear-gradient(to right, #a770ef, #cf8bf3, #fdb99b);
     background: linear-gradient(to right, #a770ef, #cf8bf3, #fdb99b);
 }
+
+
+
+.olursaIns{
+}
