--- a/BuzDolabiVI/Views/Shared/_HeaderPartial.cshtml
+++ b/BuzDolabiVI/Views/Shared/_HeaderPartial.cshtml
@@ -3,7 +3,7 @@
     <div id="AramaCubugu">ARAMA CUuBUGU</div>
     <div id="KullaniciKismi">  <partial name="_LoginPartial" /></div>
 </div>
-<nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3 mt-5">
+<nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
     <div class="container-fluid" id="Nav">
         <a class="navbar-brand" asp-area="" asp-controller="Tarifler" asp-action="Index">BuzDolabiVI</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
