--- a/BuzDolabiVI/Views/Tarifler/Detayli_Tarif.cshtml
+++ b/BuzDolabiVI/Views/Tarifler/Detayli_Tarif.cshtml
@@ -22,18 +22,14 @@
             <div class="col-4 mt-2 text-center ">
                 <h5 class="tarifDetay3luBaslik">Kaç Kişilik</h5>
                 <p class="tarifDetay3luCevap">veri tabanından</p>
-                <hr class="harifDetay3luHr" style="width:90%;"/>
-            </div>
-            <div class="col-4 mt-2 text-center ">
+                   <div class="col-4 mt-2 text-center ">
                 <h5 class="tarifDetay3luBaslik">Hazırlama Süresi</h5>
                 <p class="tarifDetay3luCevap">veri tabanından</p>
-                <hr class="harifDetay3luHr" />
-            </div>
+                 </div>
             <div class="col-4 mt-2 text-center ">
                 <h5 class="tarifDetay3luBaslik">Kaç Kişilik</h5>
                 <p class="tarifDetay3luCevap">veri tabanından</p>
-                <hr class="harifDetay3luHr" />
-            </div>
+              </div>
         </div>
 
         <div class="genelKutu">
@@ -46,7 +42,7 @@
         
             </div>
             <ul class="tarifMalzemeleri">
-                <li> <h6 class="fw-bold float-start" style="margin-top:2px">1 Adet -></h6> <p class="ml-2" style="margin-top:1px;"> Zeytin</p></li>
+                <li class="mt-5"> <h6 class="fw-bold float-start" style="margin-top:2px">1 Adet -></h6> <p class="ml-2" style="margin-top:1px;"> Zeytin</p></li>
                 <br />
                 <li> <h6 class="fw-bold float-start" style="margin-top:2px">1 Adet -></h6> <p class="ml-2" style="margin-top:1px;"> Zeytin</p></li>
                 <br />
@@ -60,13 +56,9 @@
             </ul>
         </div>
         <div class="genelKutu">
-          
-                    <img class="float-start" src="~/images/instructions.png"/>
-                
-                   <h4> -- 'Tarif ismi' Tarifi Nasıl Yapılır?</h4>
-         
-      
-            <div class="tarifAnlatimi mt-2">
+              <img class="float-start" src="~/images/instructions.png"/>
+              <h4> -- 'Tarif ismi' Tarifi Nasıl Yapılır?</h4>   
+            <div class="tarifAnlatimi mt-5">
                 1. Şunu yapın. <br />
                 2. Şunu yapın. <br/>
                 1. Şunu yapın. <br />
