--- a/BuzDolabiVI/Views/Tarifler/Detayli_Tarif.cshtml
+++ b/BuzDolabiVI/Views/Tarifler/Detayli_Tarif.cshtml
@@ -21,15 +21,17 @@
         <div class="row genelKutu">
             <div class="col-4 mt-2 text-center ">
                 <h5 class="tarifDetay3luBaslik">Kaç Kişilik</h5>
-                <h3 class="tarifDetay3luCevap">DB'den</h3>
-                   <div class="col-4 mt-2 text-center ">
+                <h3 class="tarifDetay3luCevap">veri tabanından</h3>
+               
+            </div>
+            <div class="col-4 mt-2 text-center ">
                 <h5 class="tarifDetay3luBaslik">Hazırlama Süresi</h5>
-                    <h3 class="tarifDetay3luCevap">DB'den</h3>
-                 </div>
+                <h3 class="tarifDetay3luCevap">veri tabanından</h3>
+            </div>
             <div class="col-4 mt-2 text-center ">
                 <h5 class="tarifDetay3luBaslik">Kaç Kişilik</h5>
-                <h3 class="tarifDetay3luCevap">DB'den</h3>
-              </div>
+                <h3 class="tarifDetay3luCevap">veri tabanından</h3>
+            </div>
         </div>
 
         <div class="genelKutu">
